# mygl

./: .dir-locals.el  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  THOUGHTS  TODO  TestResults.qpa  fail_image.rb  grammar  lldb-setup  tests
src/: Makefile  consts.rs  conversions.rs  draw.rs  egl.rs  gl.rs  glsl.rs  lib.rs  types.rs
src/glsl/: builtin.rs  interpret.rs  lex.rs  mod.rs  parse.rs
