[package]
name = "mygl"
version = "0.1.0"
authors = ["Michael Fairley <michaelfairley@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "*"
trace = {version = "*", optional = true, git = "https://github.com/gsingh93/trace"}
string_cache = "*"

[dev-dependencies]
pretty_assertions = "*"

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
debug = true
codegen-units = 32

[features]
trace_egl = ["trace"]
trace_gl = ["trace"]
default = []
